--- a/styles/classicgamestyle.css
+++ b/styles/classicgamestyle.css
@@ -4,76 +4,137 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-
-}
-#classic-app {
-  flex: 0 1 100%;
-  padding: 1%;
-  display: flex;
-  flex-direction: row;
-  font-size: 11pt;
-  flex-wrap: wrap;
 }
 #classic-header {
+  font-size: 18pt;
+  margin: 2px;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+}
+#classic-instruct-header {
+  font-size: 15pt;
+  margin: 3px;
+  margin-top: 2px;
+  margin-bottom: 2px;
+}
+#classic-instructions {
+  padding: 5px;
   font-size: 14pt;
+  margin-top: 2px;
+  margin-bottom: 2px;
+}
+#classic-instructions-box {
+  margin: 3px 0 7px 0;
 }
 #classic-typed {
   font-weight: 700;
 }
-
-#classic-time {
-  flex: 1;
-  text-align: right;
-  padding: 1%;
-}
-
 #classic-error {
   flex: 6;
   background-color: #ff9994;
   line-height: 170%;
 }
-
 #classic-status {
   font-size: 14pt;
   flex: 0 1 100%;
-  text-align: right;
-  padding: 1%;
+  display: flex;
   font-weight: 700;
 }
-
+#classic-app {
+  display: flex;
+  flex-direction: row;
+  font-size: 11pt;
+  flex-wrap: wrap;
+}
+#classic-go {
+  font-size: inherit;
+  flex: 9;
+  padding: 5px;
+  padding-left: 10px;
+  line-height: 0%;
+  height: 1px;
+  margin-bottom: 9px;
+}
+.play-button:hover {
+  text-decoration: none;
+  cursor: pointer;
+}
+.underline-magic:after {
+  display: block;
+  content: '';
+  border-bottom: 4px solid #c0e7a0;
+  transform: scaleX(0);
+  transition: transform 250ms ease-in-out;
+  transform-origin: 0% 100%;
+}
+.underline-magic:hover:after {
+  transform: scaleX(.8);
+}
+.play-button {
+  flex: .45;
+  margin: 10px;
+  padding: 5px;
+  padding-bottom: 0;
+  margin-bottom: 0;
+  margin-right: 1px;
+  padding-bottom: 1px;
+  padding-left: 1px;
+}
+#classic-play-button {
+  margin-right: 11px;
+  padding-right: 0;
+}
+#classic-repeat-button {
+  margin-left: 0;
+  padding-left: 0;
+}
 #classic-button {
-  margin-left: 1%;
-  line-height: 50%;
-  padding: 1%;
-  /*width: 30px; */
-  height: 2em;
-  margin-top: 15px;
-  flex: .1;
+  flex: 1.75;
   border-color: lightgrey;
   cursor: pointer;
   background-color: #FFF;
-
-  /* Safari 3-4, iOS 1-3.2, Android 1.6- */
-  -webkit-border-radius: 4px; 
-
-  /* Firefox 1-3.6 */
-  -moz-border-radius: 4px; 
-  
-  /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
-  border-radius: 4px;
+  padding: 5px;
+  margin: 10px;
+  font-size: inherit;
+}
+#classic-button::selection {
+  background: #FFF;
 }
 #classic-button:active {
   border-color: #e6e6e6;
+
+
+  -webkit-user-select: none; /* Chrome/Safari */        
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+ */
+
+  /* Rules below not implemented in browsers yet */
+  -o-user-select: none;
+  user-select: none;
   outline: 0;
 }
-#classic-button:focused {
-  outline: 0;
-}
-#classic-text {
+#classic-clock {
+  flex: 9;
+  padding: 5px;
+  text-align: right;
+  line-height: 0%;
+  height: 1pt;
   font-size: inherit;
-  align-self: flex-end;
-  padding: 1%;
-  flex: 0 1 100%;
+  margin: 10px;
+  margin-top: 20px;
+  margin-bottom: 0;
+}
+#classic-text-block {
+  font-size: 16pt;
+  margin: 10px;
+  margin-top: 4px;
+  margin-bottom: 5px;
+} 
+#classic-text {
+  margin-top: 0;
+  margin-bottom: 5px;
+  padding: 5px;
+  font-size: inherit;
 }
 .fine {
   background: #a0e7a0;
@@ -86,4 +147,10 @@
 }
 .blue {
   background: #aec6cf;
+}
+@media screen and (max-device-width: 500px) {
+  #classic-instructions-block {
+    height: 60pt;
+    overflow: scroll;
+  }
 }
