--- a/styles/keyappstyle.css
+++ b/styles/keyappstyle.css
@@ -28,7 +28,7 @@ body {
   top: 0;
 
 
-  border-right: 1px solid #e6e6e6;
+  border-right: solid thin #e6e6e6;
 
   /* Safari 3-4, iOS 1-3.2, Android 1.6- */
   -webkit-border-radius: 4px; 
@@ -114,9 +114,10 @@ body {
   width: 60%;
   top: 200px;
   left: 66%;
-  bottom: -50px;
-  height: 900px;
+  bottom: 50px;
+  height: 700px;
   margin: -100px -50px 0 -40%;
+  margin-bottom: 50px;
   background-color: #fff;
   opacity: 1;
 
@@ -131,6 +132,7 @@ body {
     left: 50%;
     bottom: 50%;
     margin: -16% 0 0 -40%;
+    margin-bottom: 50px;
     padding: 10px;
   }
   #info-bar {
