--- a/css/style.css
+++ b/css/style.css
@@ -24,3 +24,26 @@
 
   overflow: scroll;
 }
+
+#ad {
+  border: 1px solid #e0e0e0;
+  padding: 5px;
+  width: 90px;
+  margin: auto;
+}
+
+#ad #tagline {
+  margin: 0px;
+  text-decoration: none;
+}
+
+#ad .adlink {
+  text-decoration: none;
+  color: black;
+}
+
+#ad .plug {
+  text-decoration: none;
+  color: #a0a0a0;
+  font-size: 7pt;
+}
