--- a/css/style.css
+++ b/css/style.css
@@ -1,62 +1,158 @@
-#one {
-  position: fixed;
-
-  top: 0%;
-  left: 0%;
-  bottom: 0%;
-  right: 80%;
-
-  text-align: center;
-  padding-top: 15%;
-
-  border-right: 1px solid grey;
-
-  font-family: sans-serif;
+* {
+  box-sizing: border-box;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
 }
 
-#two {
+body {
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+#top-black-half {
+  display: block;
   position: absolute;
-
-  top: 0%;
-  left: 50%;
-  bottom: 0%;
-  right: 0%;
-
-  overflow: scroll;
+  width: 100%;
+  height: 70px;
+  background-color: #000000;
+  z-index: -500;
 }
 
-#ad {
-  border: 1px solid #e0e0e0;
-  padding: 5px;
-  padding-left: 0px;
-  padding-right: 0px;
-  width: 74px;
-  margin: auto;
-  margin-bottom: 10px;
+#white-header {
+  color: white;
+  z-index: 50000;
 }
 
-#ad img {
-  display: inline-block;
-}
-
-#ad #tagline {
-  font-size: 10pt;
-  float: right;
-  margin: 0px;
-  padding-bottom: 2px;
-  text-decoration: none;
-  display: inline;
-}
-
-#ad .adlink {
-  text-decoration: none;
+#black-header {
   color: black;
 }
 
-#ad .plug {
-  text-decoration: none;
-  color: #a0a0a0;
-  font-size: 7pt;
-  display: block;
+.invisible-header {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  z-index: 50000;
+  border: 1px solid black;
+  padding: 5px;
+}
+
+#invisible-header-white a {
+  color: white;
+}
+
+#invisible-header-black {
+  display: none;
+}
+
+.website-portion-header {
+  text-transform: uppercase;
+}
+
+#wavy-header-one {
+  height: 100px;
+  padding: 20px;
+}
+
+#wavy-header-one h1 {
+  z-index: 101;
+}
+
+#content-page {
+  padding: 10px;
+}
+
+.stressline {
+  font-size: 24pt;
+  text-align: right;
+}
+
+.portfolio-listing {
+  position: relative;
+  height: 140px;
+  box-shadow: 0px 0px 5px black;
+  padding: 10px;
   margin-top: 10px;
+}
+
+.portfolio-link {
+  position: absolute;
+}
+
+.portfolio-copy {
+  position: absolute;
+  width: 50%;
+  top: 40px;
+}
+
+.portfolio-switch .portfolio-copy {
+  left: 50%;
+}
+
+.portfolio-img {
+  position: absolute;
+  top: 50%;
+  right: 25%;
+  max-width: 50px;
+  max-height: 50px;
+}
+
+.portfolio-switch .portfolio-img {
+  right: 75%;
+}
+
+footer {
+  text-align: center;
+  background-color: #000000;
+  width: 100%;
+  color: #ffffff;
+  padding: 10px;
+}
+
+.social-icon {
+  display: inline;
+  width: 20px;
+  margin: 7px;
+}
+
+.social-link {
+  color: white;
+}
+
+#wq {
+  font-family: monospace;
+  font-size: 8pt;
+}
+
+@media only screen and (min-width: 400px) {
+  h2 {
+    font-size: 24pt;
+  }
+
+  .stressline {
+    font-size: 28pt;
+  }
+
+  p {
+    font-size: 18pt;
+  }
+
+  #content-page {
+    width: 75%;
+    margin: auto;
+  }
+
+  .portfolio-listing {
+    position: relative;
+    height: 170px;
+  }
+}
+
+@media only screen and (min-width: 1000px) {
+  #content-page {
+    width: 50%;
+  }
 }
